scrollbar modifications but will have to fix later

--- a/popup/popup.less
+++ b/popup/popup.less
@@ -68,15 +68,14 @@ h1
 
     &::-webkit-scrollbar
     {
-        width: 3px;
+        width: 15px;
         background-color: white;
     }
 
     &::-webkit-scrollbar-thumb
     {
-        width: 3px;
-        border-radius: 3px;
-        background-color: @medium-text;
+        width: 15px;
+        border-right: 2px solid @medium-text;
     }
 
     &::-webkit-scrollbar-button
@@ -89,9 +88,6 @@ h1
 {
     position: relative;
     height: 60px;
-    margin: 0 10px 0 10px;
-
-
 
     h2
     {
